--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@react-aria/visually-hidden": "3.8.12",
 		"@react-types/shared": "3.26.0",
 		"@tanstack/react-query": "^5.64.0",
+		"axios": "^1.7.9",
 		"clsx": "2.1.1",
 		"framer-motion": "11.15.0",
 		"react": "18.3.1",
