--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@tanstack/react-query": "^5.64.0",
 		"axios": "^1.7.9",
 		"clsx": "2.1.1",
+		"dayjs": "^1.11.13",
 		"framer-motion": "11.15.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
