--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@openapi-codegen/typescript": "^8.0.2",
 		"@react-aria/visually-hidden": "3.8.12",
 		"@react-types/shared": "3.26.0",
+		"@tabler/icons-react": "^3.28.1",
 		"@tanstack/react-query": "^5.64.0",
 		"axios": "^1.7.9",
 		"clsx": "2.1.1",
