--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
 		"framer-motion": "11.15.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
+		"react-responsive": "^10.0.0",
 		"react-router-dom": "6.23.0",
 		"tailwind-variants": "0.1.20",
-		"tailwindcss": "3.4.16"
+		"tailwindcss": "3.4.16",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
