--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@react-types/shared": "3.26.0",
 		"@tabler/icons-react": "^3.28.1",
 		"@tanstack/react-query": "^5.64.0",
+		"@visx/visx": "^3.12.0",
 		"axios": "^1.7.9",
 		"clsx": "2.1.1",
 		"dayjs": "^1.11.13",
