--- a/package.json
+++ b/package.json
@@ -1,72 +1,73 @@
 {
-	"name": "Plant Tracker",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "eslint -c .eslintrc.json ./src/**/**/*.{ts,tsx} --fix",
-		"preview": "vite preview",
-		"init-codegen": "openapi-codegen init",
-		"codegen": "openapi-codegen gen plants",
-		"prepare": "husky"
-	},
-	"dependencies": {
-		"@nextui-org/button": "2.2.8",
-		"@nextui-org/code": "2.2.5",
-		"@nextui-org/dropdown": "2.3.3",
-		"@nextui-org/input": "2.4.7",
-		"@nextui-org/kbd": "2.2.5",
-		"@nextui-org/link": "2.2.6",
-		"@nextui-org/navbar": "2.2.7",
-		"@nextui-org/react": "^2.6.11",
-		"@nextui-org/snippet": "2.2.9",
-		"@nextui-org/switch": "2.2.7",
-		"@nextui-org/system": "2.4.5",
-		"@nextui-org/theme": "2.4.4",
-		"@openapi-codegen/cli": "^2.0.2",
-		"@openapi-codegen/typescript": "^8.0.2",
-		"@react-aria/visually-hidden": "3.8.12",
-		"@react-types/shared": "3.26.0",
-		"@tabler/icons-react": "^3.28.1",
-		"@tanstack/react-query": "^5.64.0",
-		"@visx/visx": "^3.12.0",
-		"axios": "^1.7.9",
-		"clsx": "2.1.1",
-		"dayjs": "^1.11.13",
-		"framer-motion": "11.15.0",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"react-responsive": "^10.0.0",
-		"react-router-dom": "6.23.0",
-		"tailwind-variants": "0.1.20",
-		"tailwindcss": "3.4.16",
-		"zod": "^3.24.1"
-	},
-	"devDependencies": {
-		"@types/node": "20.5.7",
-		"@types/react": "18.3.3",
-		"@types/react-dom": "18.3.0",
-		"@typescript-eslint/eslint-plugin": "8.11.0",
-		"@typescript-eslint/parser": "8.11.0",
-		"@vitejs/plugin-react": "^4.2.1",
-		"autoprefixer": "10.4.19",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "9.1.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "5.2.1",
-		"eslint-plugin-react": "^7.23.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-unused-imports": "4.1.4",
-		"husky": "^9.1.7",
-		"postcss": "8.4.38",
-		"prettier": "3.3.3",
-		"typescript": "5.6.3",
-		"vite": "^5.2.0",
-		"vite-plugin-pwa": "^0.21.1",
-		"vite-tsconfig-paths": "^4.3.2"
-	}
+  "name": "Plant Tracker",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint -c .eslintrc.json ./src/**/**/*.{ts,tsx}",
+    "format": "prettier --write .",
+    "preview": "vite preview",
+    "init-codegen": "openapi-codegen init",
+    "codegen": "openapi-codegen gen plants",
+    "prepare": "husky"
+  },
+  "dependencies": {
+    "@nextui-org/button": "2.2.8",
+    "@nextui-org/code": "2.2.5",
+    "@nextui-org/dropdown": "2.3.3",
+    "@nextui-org/input": "2.4.7",
+    "@nextui-org/kbd": "2.2.5",
+    "@nextui-org/link": "2.2.6",
+    "@nextui-org/navbar": "2.2.7",
+    "@nextui-org/react": "^2.6.11",
+    "@nextui-org/snippet": "2.2.9",
+    "@nextui-org/switch": "2.2.7",
+    "@nextui-org/system": "2.4.5",
+    "@nextui-org/theme": "2.4.4",
+    "@openapi-codegen/cli": "^2.0.2",
+    "@openapi-codegen/typescript": "^8.0.2",
+    "@react-aria/visually-hidden": "3.8.12",
+    "@react-types/shared": "3.26.0",
+    "@tabler/icons-react": "^3.28.1",
+    "@tanstack/react-query": "^5.64.0",
+    "@visx/visx": "^3.12.0",
+    "axios": "^1.7.9",
+    "clsx": "2.1.1",
+    "dayjs": "^1.11.13",
+    "framer-motion": "11.15.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-responsive": "^10.0.0",
+    "react-router-dom": "6.23.0",
+    "tailwind-variants": "0.1.20",
+    "tailwindcss": "3.4.16",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.5.7",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "8.11.0",
+    "@typescript-eslint/parser": "8.11.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "4.1.4",
+    "husky": "^9.1.7",
+    "postcss": "8.4.38",
+    "prettier": "3.3.3",
+    "typescript": "5.6.3",
+    "vite": "^5.2.0",
+    "vite-plugin-pwa": "^0.21.1",
+    "vite-tsconfig-paths": "^4.3.2"
+  }
 }
