--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@serwist/vite": "^9.0.11",
+    "@serwist/window": "^9.0.11",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -65,6 +67,7 @@
     "husky": "^9.1.7",
     "postcss": "8.4.38",
     "prettier": "3.3.3",
+    "serwist": "^9.0.11",
     "typescript": "5.6.3",
     "vite": "^5.2.0",
     "vite-plugin-pwa": "^0.21.1",
