--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router-dom": "6.23.0",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.16",
+    "ua-parser-js": "^2.0.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
