--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@nextui-org/button": "2.2.8",
-    "@nextui-org/code": "2.2.5",
-    "@nextui-org/dropdown": "2.3.3",
-    "@nextui-org/input": "2.4.7",
-    "@nextui-org/kbd": "2.2.5",
-    "@nextui-org/link": "2.2.6",
-    "@nextui-org/navbar": "2.2.7",
-    "@nextui-org/react": "^2.6.11",
-    "@nextui-org/snippet": "2.2.9",
-    "@nextui-org/switch": "2.2.7",
-    "@nextui-org/system": "2.4.5",
-    "@nextui-org/theme": "2.4.4",
+    "@heroui/button": "2.2.15",
+    "@heroui/code": "2.2.11",
+    "@heroui/dropdown": "2.3.15",
+    "@heroui/input": "2.4.15",
+    "@heroui/kbd": "2.2.11",
+    "@heroui/link": "2.2.12",
+    "@heroui/navbar": "2.2.13",
+    "@heroui/react": "2.7.4",
+    "@heroui/snippet": "2.2.16",
+    "@heroui/switch": "2.2.13",
+    "@heroui/system": "2.4.11",
+    "@heroui/theme": "2.4.11",
     "@openapi-codegen/cli": "^2.0.2",
     "@openapi-codegen/typescript": "^8.0.2",
     "@react-aria/visually-hidden": "3.8.12",
